--- a/foodtruck-war/src/main/webapp/WEB-INF/web.xml
+++ b/foodtruck-war/src/main/webapp/WEB-INF/web.xml
@@ -3,10 +3,10 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
 
-	<listener>
+<!--  	<listener>
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
-
+-->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
@@ -31,7 +31,7 @@
 
 	<servlet-mapping>
 		<servlet-name>jersey-spring</servlet-name>
-		<url-pattern>/v1/*</url-pattern>
+		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 
 </web-app>
