--- a/foodtruck-war/src/main/webapp/WEB-INF/web.xml
+++ b/foodtruck-war/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	
-		<listener>
+	<listener>
   		<listener-class>com.hangfu.foodtruck.webservices.cache.CacheRefreshJobListener</listener-class>
  	</listener>
 
@@ -35,7 +35,7 @@
 
 	<servlet-mapping>
 		<servlet-name>jersey-spring</servlet-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>/foodtruck/*</url-pattern>
 	</servlet-mapping>
 
 </web-app>
